# scy

./: .gitignore  .readthedocs.yaml  COPYING  Makefile  README.md  pyproject.toml
.github/workflows/: codeql.yml
docs/source/: conf.py  example.rst  index.rst  install.rst  reference.rst  usage.rst
docs/util/: SCYLexer.py  YoscryptLexer.py
example/: axixfer.scy  conftest.py  cpu.sv  fifo.sv  mem.sv
example/axixfer/: axixfer.scy  bus.sv  top.sv
example/hpm-test/: .gitignore  README.md  cover_stmts.vh  hpm-test.scy  test_hpm.py
example/hpm-test-sby/: .gitignore  cover.sby  cover2.sby  cover_stmts.vh  makefile
example/hpm-test-scy/: .gitignore  cover_stmts.vh  hpm-test.scy  trace.gtkw
example/picosoc/: README.md  hello.scy  picosoc.v  props.sv
example/updn_cntr/: test_updn_cntr.py  up_counter.sv
scysrc/: scy.py  scy_config_parser.py  scy_task_tree.py
src/scy/: scy.py  scy_cmdline.py  scy_config_parser.py  scy_exceptions.py  scy_sby_bridge.py  scy_task_runner.py  scy_task_tree.py
tests/: test_scy_sby_bridge.py  test_scy_task_runner.py  test_scy_task_tree.py
